Fixed tests and wrapshmi

--- a/content/src/editor.less
+++ b/content/src/editor.less
@@ -1063,13 +1063,13 @@ body#pencildoc #diigolet-csm {
   height: 10px;
   margin: 1em 4em 4em; }
                     
-.scrubber .ui-slider-handle {
-  border-radius: 23px;
-  height: 23px;
-  width: 23px;
-  top: -7px;
-  margin-left: -11px;
-  border: 2px solid #fffaf7; }
+ .scrubber .ui-slider-handle {
+  border-radius: 2px;
+  height: 20px;
+  width: 12px;
+  top: -26px;
+  border: none; }
+  
                     
 .scrubber .ui-slider-pip {
   top: 3px; }
@@ -1109,7 +1109,7 @@ body#pencildoc #diigolet-csm {
                     
   .scrubber .ui-slider-pip.ui-slider-pip-selected,
   .scrubber .ui-slider-pip.ui-slider-pip-selected-initial {
-    color: #434d5a; }
+    color: #434d5a; } 
 
 .texttoggle, .blocktoggle {
   position: absolute;
